<resources>
    <string name="app_name">FarmStayz</string>

    <string name="background_image_desc">Farmhouse villa background</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_account_desc">Login to your Farm House Villa account</string>
    <string name="email_address_label">Email Address</string>
    <string name="email_hint">you@example.com</string>
    <string name="email_icon_desc">Email icon</string>
    <string name="password_label">Password</string>
    <string name="password_hint">••••••••</string>
    <string name="password_icon_desc">Lock icon</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in_button_text">Sign in</string>
    <string name="no_account_text">Don\'t have an account?</string>
    <string name="sign_up_text">Sign up</string>
    <string name="default_web_client_id">718156646751-kuss8nkodqaf764h9h6bf1dcvmhvc4mm.apps.googleusercontent.com</string>

</resources>